1-created for recommended page: 
  -nav.recommended.html
  -nav.recommended.ts
  -nav.recommended.css
  -img.recommended.html
  -img.recommended.ts
  -img.recommended.css
  -rec.card.html (ngfor loop)
  -rec.card.ts
  -rec.card.css
2-created for photos page:
  -nav.photos.html
  -nav.photos.ts
  -nav.photos.css
  -photos.card.html (ngfor loop)
  -photos.card.ts
  -photos.card.css
  -crousel.photos.html
  -crousel.photos.ts
  -crousel.photos.css
  