@@ -1,3 +1,4 @@
+<cs-user-info></cs-user-info>
 <cs-topnavbar>loading </cs-topnavbar>
 
 <div class= "d-flex">
