@@ -1,0 +1,6 @@
+export interface UserInfo{
+    FirstName: string;
+    LastName: string;
+    github: string;
+    mix_id: String;
+}
